add new function(version 1.0.1)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="Transparent">#00000000</color>
     <color name="black">#000</color>
     <color name="red">#f00</color>
+    <color name="gray9">#999999</color>
 </resources>
