--- a/app/src/main/res/layout/yi.xml
+++ b/app/src/main/res/layout/yi.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -90,4 +89,39 @@
         android:layout_height="wrap_content"
         android:background="@drawable/button_style"
         android:text="@string/start_service"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/autoReply"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"/>
+    <!--自动回复模块-->
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="50dp"
+       android:padding="10dp"
+       android:elevation="10dp">
+       <TextView
+           android:id="@+id/Reply"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:textColor="@color/black"
+           android:text="@string/yi_textView_show"/>
+       <Switch
+           android:id="@+id/autoReply"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_centerInParent="true"
+           android:layout_alignParentEnd="true"/>
+   </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@color/gray9"/>
 </LinearLayout>
